package com.palg.tp.listener;

public class SessionListenerImpl implements SessionListener {
    @Override
    public void sessionClosed(long key) {

    }

    @Override
    public void sessionStillClosed(long key) {

    }

    @Override
    public void sessionOpened(long key) {

    }

    @Override
    public void sessionStillOpened(long key) {

    }
}
