package com.palg.tp.manager;

public enum SessionStatus {
    OPEN, CLOSE
}
